[tool.poetry]
name = "blue-octopus"
version = "1.1.0"
description = "Downloads legacy web content and saves it as JSON file."
authors = ["Wolfsauge"]
license = "MIT"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^2.0.6"
beautifulsoup4 = "^4.12.2"
ftfy = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
